<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/personal_data_header">

        <EditTextPreference
            app:key="email"
            app:title="@string/email"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/privacy_header">

        <SwitchPreferenceCompat
            app:key="hide_phone"
            app:summary="@string/settings_phone_subtitle"
            app:title="@string/settings_phone_title" />

        <SwitchPreferenceCompat
            app:key="hide_email"
            app:summary="@string/settings_email_subtitle"
            app:title="@string/settings_email_title" />

    </PreferenceCategory>

</PreferenceScreen>