<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="366dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105">

        <EditText
            android:id="@+id/inputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_login"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/invalidLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textColor="@color/purple_500" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/invalidPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/purple_500" />

        <ProgressBar
            android:id="@+id/loadingBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="gone" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickLogin"
            android:text="@string/btn_login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>